# ACE-Step-1.5-ggml

./: .gitignore  .gitmodules  1  run.sh  transfer.sh
acestep/: api_server.py  handler.py  llm_inference.py
acestep_ggml/: CMakeLists.txt
acestep_ggml/build_metal/: CMakeCache.txt  Makefile  ace_ggml_cli  cmake_install.cmake  compile_commands.json  libacestep_ggml.dylib
acestep_ggml/cpp/: ace_ggml_cli.cpp  acestep_dit_config.cpp  acestep_dit_config.h  acestep_dit_model.cpp  acestep_dit_model.h  acestep_ggml.cpp  acestep_ggml.h  acestep_vae_model.cpp  acestep_vae_model.h  json_min.cpp  json_min.h  qwen_config.cpp  qwen_config.h  qwen_model.cpp  qwen_model.h  safetensors.cpp  safetensors.h
acestep_ggml/reports/quant_eval_20260206_131422/: summary.md
acestep_ggml/reports/real_case/: lyric_neo_soul.txt  style_neo_soul.txt
acestep_ggml/reports/real_case/quant_eval_neo_soul_full_lyric_s1/: summary.md
acestep_ggml/reports/real_case/quant_eval_neo_soul_l256_s1_full/: summary.md
acestep_ggml/reports/real_case/quant_eval_neo_soul_l256_s4_full/: summary.md
acestep_ggml/tools/: build_and_run_10s.sh  compare_dit.py  compare_text_encoder.py  compare_vae.py  eval_quant_prompt_pipeline.py  eval_quant_style_lyric_pipeline.py  export_safetensors_to_gguf.py  inspect_safetensors.py  run_staged_pipeline_tests.py  run_style_lyric_pipeline.py  run_unified_prompt_style_lyric_timbre.py
scripts/: build_cli_token_files.py  build_cli_token_files_test.py  run_non_ggml_real_case.py
